# default_deepcopy

./: README.md  pyproject.toml  test.py
src/default_deepcopy/: __init__.py
