
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "default_deepcopy"
version = "0.0.1"
authors = [
    { name="Liu Zuo Lin", email="zlliu246@gmail.com" },
]
description = "deepcopy, but if exception, return default value instead of raising exception"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [

]

[project.urls]
Homepage = "https://github.com/zlliu246/default_deepcopy"
Issues = "https://github.com/zlliu246/default_deepcopy/issues"
